Fixes too high header border

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ header span
     font-style: italic;
     width: 100%;
     text-align: right;
-    padding: 1.5em 1.8em;
+    padding: 1.1em 1.8em;
     display: inline-block;
 }
 
